--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.animation": "0.5.1-preview.3",
     "com.unity.burst": "1.3.5",
     "com.unity.collections": "0.4.0-preview.6",
+    "com.unity.dataflowgraph": "0.16.0-preview.3",
     "com.unity.dots.editor": "0.8.2-preview",
     "com.unity.entities": "0.4.0-preview.10",
     "com.unity.ext.nunit": "1.0.0",
